[SLAC22-592] Fix overlap image with quote

--- a/web/themes/gesso/source/03-components/external-link/_external-link.scss
+++ b/web/themes/gesso/source/03-components/external-link/_external-link.scss
@@ -3,7 +3,7 @@
 @use '00-config' as *;
 
 :where(.external-link .c-icon) {
-  color: var(--gesso-accent-color);
+  color: var(--gesso-link-color);
 }
 
 .external-link .c-icon {
